k8s/basic/my-ubuntu.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-ubuntu-pod
spec:
  containers:
  - name: my-ubuntu
    image: my-ubuntu:0.1
    imagePullPolicy: Never
