k8s/basic/statefulset-web02.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sfs-test01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-sfs01
  serviceName: sfs-service01
  template:
    metadata:
      labels:
        app: web-sfs01
    spec:
      containers:
      - name: nginx
        image: nginx:latest
