k8s/basic/volume-test02.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-volume-02
spec:
  nodeSelector:
    kubernetes.io/hostname: ip-172-31-3-236
  containers:
  - name: nginx-test01
    image: nginx:latest
    volumeMounts:
    - name: hostpath-test01
      mountPath: /mount01
  volumes:
  - name: hostpath-test01
    hostPath:
      path: /home/ubuntu/work/k8s/basic/volhost01
      type: DirectoryOrCreate
