k8s/basic/volume-test04-3-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-volume-04
spec:
  containers:
  - name: nginx-test01
    image: nginx:latest
    volumeMounts:
    - name: nfs-pv-01
      mountPath: /mount01
  volumes:
  - name: nfs-pv-01
    persistentVolumeClaim:
      claimName: pvc-01
