k8s/basic/service-test02.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service-nodeport
spec:
  selector:
    app: web-deploy
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 31001
    port: 80
    targetPort: 80
