k8s/basic/statefulset-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sfs-service01
spec:
  selector:
    app: web-sfs01
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
